Ensure tagline is readable

--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ html {
 }
 
 .logo {
-  font-size: 1.4rem;
+  --relative-font-size: 1.4;
+  font-size: calc(var(--relative-font-size) * 1rem);
   font-weight: 100;
   margin-bottom: var(--logo-padding);
   padding-left: 0.1em
@@ -27,6 +28,11 @@ html {
   height: 1.64em;
   width: auto;
   margin-left: -1em;
+}
+@media screen and (max-width: 600px) {
+  .logo {
+    font-size: calc(var(--relative-font-size) * 18px);
+  }
 }
 
 h1 {
